--- a/package.json
+++ b/package.json
@@ -13,15 +13,24 @@
   },
   "dependencies": {
     "hexo": "^5.0.0",
+    "hexo-butterfly-article-double-row": "^1.0.2",
     "hexo-deployer-git": "^3.0.0",
+    "hexo-electric-clock": "^1.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-githubcalendar": "^1.2.3",
+    "hexo-history-calendar": "^1.0.3",
+    "hexo-magnet": "^1.0.9",
+    "hexo-render-pug": "^2.1.4",
+    "hexo-render-sass": "^2020.4.16",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-pug": "^1.0.0",
+    "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
+    "hexo-swiper-bar": "^1.1.1",
     "hexo-theme-fluid": "^1.8.9-a",
     "hexo-theme-landscape": "^0.0.3"
   }
