--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -190,7 +190,7 @@ post_copyright:
 reward:
   enable: true
   QR_code:
-    - img /images/wechat.jpeg
+    - img: /images/wechat.jpeg
     # - img: /img/wechat.jpg
     #   link:
     #   text: wechat
@@ -518,7 +518,7 @@ tag_ui: # 留空或 index
 # Website Background (設置網站背景)
 # can set it to color or image (可設置圖片 或者 顔色)
 # The formal of image: url(http://xxxxxx.com/xxx.jpg)
-background: url(https://wangssssss.github.io/images/index.jpeg)
+background: url(https://raw.githubusercontent.com/WANGSSSSSSS/WANGSSSSSSS.github.io/master/images/index.jpeg)
 
 # Footer Background
 footer_bg: true
