--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "hexo-render-pug": "^2.1.4",
     "hexo-render-sass": "^2020.4.16",
     "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.0.0",
+    "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
