--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -42,8 +42,8 @@ copy:
 # formal:
 #   icon: link || the description
 social:
-  fab fa-github: https://github.com/WANGSSSSSS || Github
-  fas fa-envelope: mailto:xxxxxx@gmail.com || Email
+  fab fa-github: https://github.com/WANGSSSSSSS || Github
+  fas fa-envelope: mailto:wangshuai.excellent@foxmail.com || Email
 
 # search (搜索)
 # --------------------------------------
