--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
     "hexo-githubcalendar": "^1.2.3",
+    "hexo-hide-posts": "^0.1.1",
     "hexo-history-calendar": "^1.0.3",
     "hexo-magnet": "^1.0.9",
     "hexo-render-pug": "^2.1.4",
     "hexo-render-sass": "^2020.4.16",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-kramed": "^0.1.4",
+    "hexo-renderer-marked": "^4.1.0",
     "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
